ajustando el top del carousel y poniendo el texto

--- a/index.html
+++ b/index.html
@@ -47,19 +47,25 @@
     <div class="item active">
       <img class="imagensota" src="images/slider.png" alt="fdghdfgh">
       <div class="carousel-caption">
-        ...
+        <h1>Somos tus ojos en china</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio laboriosam neque totam, unde, debitis vel eligendi in accusamus quasi amet, voluptatum pariatur, distinctio nobis cum molestias! Aut, minima. Totam repellat et omnis, unde sunt id dolore soluta tenetur corporis ipsa.</p>
+        <button type="button" class="btn btn-danger">Danger</button>
       </div>
     </div>
     <div class="item">
       <img class="imagensota" src="images/slider.png" alt="sfgddfgdf">
       <div class="carousel-caption">
-        ...
+        <h1>Somos tus ojos en china</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio laboriosam neque totam, unde, debitis vel eligendi in accusamus quasi amet, voluptatum pariatur, distinctio nobis cum molestias! Aut, minima. Totam repellat et omnis, unde sunt id dolore soluta tenetur corporis ipsa.</p>
+        <button type="button" class="btn btn-danger">Danger</button>
       </div>
     </div>
     <div class="item">
       <img class="imagensota" src="images/slider.png" alt="sfgddfgdf">
       <div class="carousel-caption">
-        ...
+        <h1>Somos tus ojos en china</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio laboriosam neque totam, unde, debitis vel eligendi in accusamus quasi amet, voluptatum pariatur, distinctio nobis cum molestias! Aut, minima. Totam repellat et omnis, unde sunt id dolore soluta tenetur corporis ipsa.</p>
+        <button type="button" class="btn btn-danger">Danger</button>
       </div>
     </div>
   </div>
