--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>ojitos</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <title>ojitos</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<div id="carousel-example-generic" class="carousel slide slideheader" data-ride="carousel">
 <nav class="navbar navbar-default menutop">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -43,29 +43,29 @@
   </ol>
 
   <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
+  <div class="carousel-inner carousel-header" role="listbox">
     <div class="item active">
       <img class="imagensota" src="images/slider.png" alt="fdghdfgh">
-      <div class="carousel-caption">
-        <h1>Somos tus ojos en china</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio laboriosam neque totam, unde, debitis vel eligendi in accusamus quasi amet, voluptatum pariatur, distinctio nobis cum molestias! Aut, minima. Totam repellat et omnis, unde sunt id dolore soluta tenetur corporis ipsa.</p>
-        <button type="button" class="btn btn-danger">Danger</button>
+      <div class="carousel-caption captionheader">
+        <h1 class="titulocarousel">Somos tus ojos en china</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis eius est ullam. Quia fugiat mollitia, odit autem consectetur quos possimus esse laboriosam omnis molestias quis repellat illo eligendi nesciunt quo maiores vel quidem vero reiciendis dolorum eaque cumque cum quae, ipsa perferendis. Ea rerum quis excepturi adipisci exercitationem, nisi voluptatem asperiores ut non molestias neque aperiam ipsa id dolorem, blanditiis accusantium aliquam! Reiciendis, fugit consequatur quidem voluptas eos doloremque odio.</p>
+        <button type="button" class="btn btn-danger boton">ir a servicios</button>
       </div>
     </div>
     <div class="item">
       <img class="imagensota" src="images/slider.png" alt="sfgddfgdf">
-      <div class="carousel-caption">
-        <h1>Somos tus ojos en china</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio laboriosam neque totam, unde, debitis vel eligendi in accusamus quasi amet, voluptatum pariatur, distinctio nobis cum molestias! Aut, minima. Totam repellat et omnis, unde sunt id dolore soluta tenetur corporis ipsa.</p>
-        <button type="button" class="btn btn-danger">Danger</button>
+      <div class="carousel-caption captionheader">
+        <h1 class="titulocarousel">Somos tus ojos en china</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptates, earum consequatur aperiam, tenetur iusto! Omnis ex provident quae ad, magnam rem quos rerum cupiditate eveniet consequuntur repellendus vel aperiam eligendi incidunt quibusdam similique ipsam optio, distinctio expedita assumenda facere numquam laudantium error modi! Aliquam quia nihil voluptate facere, ea quasi. Aliquam non quibusdam animi eum laborum vero, iusto distinctio amet quia quam deserunt dolore velit. Rem eius eaque ad.</p>
+        <button type="button" class="btn btn-danger boton">ir a servicios</button>
       </div>
     </div>
     <div class="item">
       <img class="imagensota" src="images/slider.png" alt="sfgddfgdf">
-      <div class="carousel-caption">
-        <h1>Somos tus ojos en china</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio laboriosam neque totam, unde, debitis vel eligendi in accusamus quasi amet, voluptatum pariatur, distinctio nobis cum molestias! Aut, minima. Totam repellat et omnis, unde sunt id dolore soluta tenetur corporis ipsa.</p>
-        <button type="button" class="btn btn-danger">Danger</button>
+      <div class="carousel-caption captionheader">
+        <h1 class="titulocarousel">Somos tus ojos en china</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae culpa saepe rerum omnis, id hic impedit, nam expedita laboriosam magni assumenda? Doloremque iure accusamus ipsum, perferendis ratione, tempora eius repellendus a reprehenderit deleniti facilis! Autem praesentium dolores mollitia neque fugit molestias doloribus, nam eligendi. Minima enim perferendis, expedita eveniet accusantium molestias hic, sunt, repellat maxime natus sit quidem laboriosam inventore possimus neque. Tenetur debitis nihil, nisi ea dolorem quos aspernatur!</p>
+        <button type="button" class="btn btn-danger boton">ir a servicios</button>
       </div>
     </div>
   </div>
@@ -81,11 +81,93 @@
   </a>
 </div>
 
+<section class="info">
+  <div class="container">
+    <div class="col-sm-4 text-center">
+      <h2 class="text-uppercase"><strong>quienes somos</strong></h2>
+      <hr>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi quasi necessitatibus officiis possimus, quia laudantium, quae aperiam libero similique suscipit laboriosam illo facere. Animi autem corporis, tempora qui alias eaque.</p>
+    </div>
+
+    <div class="col-sm-4 text-center">
+      <h2 class="text-uppercase"><strong>por que redsun?</strong></h2>
+      <hr>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi quasi necessitatibus officiis possimus, quia laudantium, quae aperiam libero similique suscipit laboriosam illo facere. Animi autem corporis, tempora qui alias eaque.</p>
+      <p><em><strong>Somos tus ojos en China</strong></em></p>
+    </div>
+
+    <div class="col-sm-4 text-center">
+      <h2 class="text-uppercase"><strong>mision</strong></h2>
+      <hr>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi quasi necessitatibus officiis possimus, quia laudantium, quae aperiam libero similique suscipit laboriosam illo facere. Animi autem corporis, tempora qui alias eaque.</p>
+    </div>
+  </div>
+</section>
+
+<div id="carousel-example-generic" class="carousel slide slidetestimonial" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators indicators-testimonial">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img class="testimonialimg" src="images/testimonials.png" alt="fdghdfgh">
+      <div class="carousel-caption caption-testimonial">
+        <h3 class="titulocarousel text-left">Testimonios</h3>
+        <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora id distinctio tempore ullam voluptatum vero facere rerum porro cupiditate. Quibusdam soluta optio delectus porro harum doloremque obcaecati, et. Veritatis, fuga!</p>
+
+        <small><p class="text-left">Lorem ipsum dolor sit amet, consectetur.</p></small>
+      </div>
+    </div>
+    <div class="item">
+      <img class="testimonialimg" src="images/testimonials.png" alt="sfgddfgdf">
+      <div class="carousel-caption caption-testimonial">
+        <h3 class="titulocarousel text-left">Testimonios</h3>
+        <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis unde eveniet delectus amet in nam, quam doloremque tenetur omnis consectetur corporis perspiciatis expedita mollitia nobis quasi veritatis! Voluptatem, omnis, incidunt.</p>
+
+        <small><p class="text-left">Lorem ipsum dolor sit amet, consectetur.</p></small>
+      </div>
+    </div>
+    <div class="item">
+      <img class="testimonialimg" src="images/testimonials.png" alt="sfgddfgdf">
+      <div class="carousel-caption caption-testimonial">
+        <h3 class="titulocarousel text-left">Testimonios</h3>
+        <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis unde eveniet delectus amet in nam, quam doloremque tenetur omnis consectetur corporis perspiciatis expedita mollitia nobis quasi veritatis! Voluptatem, omnis, incidunt.</p>
+
+        <small><p class="text-left">Lorem ipsum dolor sit amet, consectetur.</p></small>
+      </div>
+    </div>
+    <div class="item">
+      <img class="testimonialimg" src="images/testimonials.png" alt="sfgddfgdf">
+      <div class="carousel-caption caption-testimonial">
+        <h3 class="titulocarousel text-left">Testimonios</h3>
+        <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis unde eveniet delectus amet in nam, quam doloremque tenetur omnis consectetur corporis perspiciatis expedita mollitia nobis quasi veritatis! Voluptatem, omnis, incidunt.</p>
+
+        <small><p class="text-left">Lorem ipsum dolor sit amet, consectetur.</p></small>
+      </div>
+    </div>
+</div>
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
 
 <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 <script src="js/bootstrap.js"></script>
 <script type="text/javascript">
-	$(document).ready(function(){
+  $(document).ready(function(){
      $("#myCarousel").carousel();
 });
 </script>
