acomodando selectores de los carousel

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 
-<div id="carousel-example-generic" class="carousel slide slideheader" data-ride="carousel">
+<div id="carousel-header" class="carousel slide slideheader" data-ride="carousel">
 <nav class="navbar navbar-default menutop">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -37,9 +37,9 @@
 </nav>
   <!-- Indicators -->
   <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-header" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-header" data-slide-to="1"></li>
+    <li data-target="#carousel-header" data-slide-to="2"></li>
   </ol>
 
   <!-- Wrapper for slides -->
@@ -71,11 +71,11 @@
   </div>
 
   <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+  <a class="left carousel-control" href="#carousel-header" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+  <a class="right carousel-control" href="#carousel-header" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
@@ -104,13 +104,13 @@
   </div>
 </section>
 
-<div id="carousel-example-generic" class="carousel slide slidetestimonial" data-ride="carousel">
+<div id="carousel-testimonial" class="carousel slide slidetestimonial" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators indicators-testimonial">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    <li data-target="#carousel-testimonial" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-testimonial" data-slide-to="1"></li>
+    <li data-target="#carousel-testimonial" data-slide-to="2"></li>
+    <li data-target="#carousel-testimonial" data-slide-to="3"></li>
   </ol>
 
   <!-- Wrapper for slides -->
@@ -153,11 +153,11 @@
     </div>
 </div>
   <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+  <a class="left carousel-control" href="#carousel-testimonial" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+  <a class="right carousel-control" href="#carousel-testimonial" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
@@ -168,7 +168,8 @@
 <script src="js/bootstrap.js"></script>
 <script type="text/javascript">
   $(document).ready(function(){
-     $("#myCarousel").carousel();
+     $("#carousel-header").carousel();
+     $("#carousel-testimonial").carousel();
 });
 </script>
 </body>
