--- a/index.html
+++ b/index.html
@@ -163,6 +163,40 @@
   </a>
 </div>
 
+<section class="servicios">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-8 col-md-offset-2">
+        <div class="row">
+          <div class="col-xs-3">
+            <img src="images/servicios.png" alt="" class="img-responsive">
+          </div>
+          <div class="col-xs-9">
+            <h2>kjshdfkjsdfghkldskf</h2>  
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, quibusdam cupiditate ad, dolor nostrum error magni, quasi incidunt recusandae quam earum inventore similique perferendis itaque. Aliquam quos facere molestias ullam fugit quisquam veritatis et ducimus, sequi nemo, blanditiis dolor cum.</p>
+            <button type="button" class="btn boton pull-right">ir a servicios</button>
+          </div>
+        </div>
+      
+        <hr class="hr-serv">
+      
+        <div class="row">
+          <div class="col-xs-9">
+            <h2>kjshdfkjsdfghkldskf</h2>  
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, quibusdam cupiditate ad, dolor nostrum error magni, quasi incidunt recusandae quam earum inventore similique perferendis itaque. Aliquam quos facere molestias ullam fugit quisquam veritatis et ducimus, sequi nemo, blanditiis dolor cum.</p>
+            <button type="button" class="btn boton pull-left">ir a servicios</button>
+          </div>
+          <div class="col-xs-3">
+            <img src="images/servicios.png" alt="" class="img-responsive">
+          </div>
+        </div>
+
+        <hr class="hr-serv">
+
+      </div>
+    </div>
+  </div>
+</section>
 
 <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 <script src="js/bootstrap.js"></script>
