--- a/index.html
+++ b/index.html
@@ -85,20 +85,20 @@
   <div class="container">
     <div class="col-sm-4 text-center">
       <h2 class="text-uppercase"><strong>quienes somos</strong></h2>
-      <hr>
+      <hr class="hrrojo">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi quasi necessitatibus officiis possimus, quia laudantium, quae aperiam libero similique suscipit laboriosam illo facere. Animi autem corporis, tempora qui alias eaque.</p>
     </div>
 
     <div class="col-sm-4 text-center">
       <h2 class="text-uppercase"><strong>por que redsun?</strong></h2>
-      <hr>
+      <hr class="hrrojo">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi quasi necessitatibus officiis possimus, quia laudantium, quae aperiam libero similique suscipit laboriosam illo facere. Animi autem corporis, tempora qui alias eaque.</p>
       <p><em><strong>Somos tus ojos en China</strong></em></p>
     </div>
 
     <div class="col-sm-4 text-center">
       <h2 class="text-uppercase"><strong>mision</strong></h2>
-      <hr>
+      <hr class="hrrojo">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi quasi necessitatibus officiis possimus, quia laudantium, quae aperiam libero similique suscipit laboriosam illo facere. Animi autem corporis, tempora qui alias eaque.</p>
     </div>
   </div>
