--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="carousel-caption captionheader">
         <h1 class="titulocarousel">Somos tus ojos en china</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis eius est ullam. Quia fugiat mollitia, odit autem consectetur quos possimus esse laboriosam omnis molestias quis repellat illo eligendi nesciunt quo maiores vel quidem vero reiciendis dolorum eaque cumque cum quae, ipsa perferendis. Ea rerum quis excepturi adipisci exercitationem, nisi voluptatem asperiores ut non molestias neque aperiam ipsa id dolorem, blanditiis accusantium aliquam! Reiciendis, fugit consequatur quidem voluptas eos doloremque odio.</p>
-        <button type="button" class="btn btn-danger boton">ir a servicios</button>
+        <button type="button" class="btn boton">ir a servicios</button>
       </div>
     </div>
     <div class="item">
@@ -57,7 +57,7 @@
       <div class="carousel-caption captionheader">
         <h1 class="titulocarousel">Somos tus ojos en china</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptates, earum consequatur aperiam, tenetur iusto! Omnis ex provident quae ad, magnam rem quos rerum cupiditate eveniet consequuntur repellendus vel aperiam eligendi incidunt quibusdam similique ipsam optio, distinctio expedita assumenda facere numquam laudantium error modi! Aliquam quia nihil voluptate facere, ea quasi. Aliquam non quibusdam animi eum laborum vero, iusto distinctio amet quia quam deserunt dolore velit. Rem eius eaque ad.</p>
-        <button type="button" class="btn btn-danger boton">ir a servicios</button>
+        <button type="button" class="btn boton">ir a servicios</button>
       </div>
     </div>
     <div class="item">
@@ -65,7 +65,7 @@
       <div class="carousel-caption captionheader">
         <h1 class="titulocarousel">Somos tus ojos en china</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae culpa saepe rerum omnis, id hic impedit, nam expedita laboriosam magni assumenda? Doloremque iure accusamus ipsum, perferendis ratione, tempora eius repellendus a reprehenderit deleniti facilis! Autem praesentium dolores mollitia neque fugit molestias doloribus, nam eligendi. Minima enim perferendis, expedita eveniet accusantium molestias hic, sunt, repellat maxime natus sit quidem laboriosam inventore possimus neque. Tenetur debitis nihil, nisi ea dolorem quos aspernatur!</p>
-        <button type="button" class="btn btn-danger boton">ir a servicios</button>
+        <button type="button" class="btn boton">ir a servicios</button>
       </div>
     </div>
   </div>
@@ -197,6 +197,38 @@
     </div>
   </div>
 </section>
+
+<footer class="footera text-center">
+<div class="container">
+  <h3>Contactenos</h3>
+  <p class="footercont">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, accusantium fugiat minus, temporibus omnis sed magni excepturi voluptatibus consequuntur vitae recusandae unde numquam, fuga quasi voluptate illum. Voluptatibus, molestiae natus?</p>
+  <button type="button" class="btn boton">ir a formulario de contacto</button>
+</div>
+</footer>
+<footer class="footerb">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4 text-center">
+        <h4 class="text-uppercase">location</h4>
+          <address>
+            1355 Market Street, Suite 900<br>
+            San Francisco, CA 94103<br>
+          </address>
+      </div>
+      <div class="col-sm-4 text-center">
+        <h4 class="text-uppercase">share with love</h4>
+        <button type="button" class="btn socialbutton"><img src="images/facebook.png" alt="facebook"></button>
+        <button type="button" class="btn socialbutton"><img src="images/twitter.png" alt="twitter"></button>
+        <button type="button" class="btn socialbutton"><img src="images/linkedin.png" alt="linkedin"></button>
+
+      </div>
+      <div class="col-sm-4 text-center">
+        <h4 class="text-uppercase">acerca de redsun</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, aspernatur.</p>
+      </div>
+    </div>
+  </div>
+</footer>
 
 <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 <script src="js/bootstrap.js"></script>
