--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner carousel-header" role="listbox">
     <div class="item active">
-      <img class="imagensota" src="images/slider.png" alt="fdghdfgh">
+      <img class="imagensota" src="images/slider.jpg" alt="fdghdfgh">
       <div class="carousel-caption captionheader">
         <h1 class="titulocarousel">Somos tus ojos en china</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis eius est ullam. Quia fugiat mollitia, odit autem consectetur quos possimus esse laboriosam omnis molestias quis repellat illo eligendi nesciunt quo maiores vel quidem vero reiciendis dolorum eaque cumque cum quae, ipsa perferendis. Ea rerum quis excepturi adipisci exercitationem, nisi voluptatem asperiores ut non molestias neque aperiam ipsa id dolorem, blanditiis accusantium aliquam! Reiciendis, fugit consequatur quidem voluptas eos doloremque odio.</p>
@@ -54,7 +54,7 @@
       </div>
     </div>
     <div class="item">
-      <img class="imagensota" src="images/slider.png" alt="sfgddfgdf">
+      <img class="imagensota" src="images/slider.jpg" alt="sfgddfgdf">
       <div class="carousel-caption captionheader">
         <h1 class="titulocarousel">Somos tus ojos en china</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptates, earum consequatur aperiam, tenetur iusto! Omnis ex provident quae ad, magnam rem quos rerum cupiditate eveniet consequuntur repellendus vel aperiam eligendi incidunt quibusdam similique ipsam optio, distinctio expedita assumenda facere numquam laudantium error modi! Aliquam quia nihil voluptate facere, ea quasi. Aliquam non quibusdam animi eum laborum vero, iusto distinctio amet quia quam deserunt dolore velit. Rem eius eaque ad.</p>
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div class="item">
-      <img class="imagensota" src="images/slider.png" alt="sfgddfgdf">
+      <img class="imagensota" src="images/slider.jpg" alt="sfgddfgdf">
       <div class="carousel-caption captionheader">
         <h1 class="titulocarousel">Somos tus ojos en china</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae culpa saepe rerum omnis, id hic impedit, nam expedita laboriosam magni assumenda? Doloremque iure accusamus ipsum, perferendis ratione, tempora eius repellendus a reprehenderit deleniti facilis! Autem praesentium dolores mollitia neque fugit molestias doloribus, nam eligendi. Minima enim perferendis, expedita eveniet accusantium molestias hic, sunt, repellat maxime natus sit quidem laboriosam inventore possimus neque. Tenetur debitis nihil, nisi ea dolorem quos aspernatur!</p>
@@ -117,7 +117,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img class="testimonialimg" src="images/testimonials.png" alt="fdghdfgh">
+      <img class="testimonialimg" src="images/testimonials.jpg" alt="fdghdfgh">
       <div class="carousel-caption caption-testimonial">
         <h3 class="titulocarousel text-left">Testimonios</h3>
         <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora id distinctio tempore ullam voluptatum vero facere rerum porro cupiditate. Quibusdam soluta optio delectus porro harum doloremque obcaecati, et. Veritatis, fuga!</p>
@@ -126,7 +126,7 @@
       </div>
     </div>
     <div class="item">
-      <img class="testimonialimg" src="images/testimonials.png" alt="sfgddfgdf">
+      <img class="testimonialimg" src="images/testimonials.jpg" alt="sfgddfgdf">
       <div class="carousel-caption caption-testimonial">
         <h3 class="titulocarousel text-left">Testimonios</h3>
         <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis unde eveniet delectus amet in nam, quam doloremque tenetur omnis consectetur corporis perspiciatis expedita mollitia nobis quasi veritatis! Voluptatem, omnis, incidunt.</p>
@@ -135,7 +135,7 @@
       </div>
     </div>
     <div class="item">
-      <img class="testimonialimg" src="images/testimonials.png" alt="sfgddfgdf">
+      <img class="testimonialimg" src="images/testimonials.jpg" alt="sfgddfgdf">
       <div class="carousel-caption caption-testimonial">
         <h3 class="titulocarousel text-left">Testimonios</h3>
         <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis unde eveniet delectus amet in nam, quam doloremque tenetur omnis consectetur corporis perspiciatis expedita mollitia nobis quasi veritatis! Voluptatem, omnis, incidunt.</p>
@@ -144,7 +144,7 @@
       </div>
     </div>
     <div class="item">
-      <img class="testimonialimg" src="images/testimonials.png" alt="sfgddfgdf">
+      <img class="testimonialimg" src="images/testimonials.jpg" alt="sfgddfgdf">
       <div class="carousel-caption caption-testimonial">
         <h3 class="titulocarousel text-left">Testimonios</h3>
         <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis unde eveniet delectus amet in nam, quam doloremque tenetur omnis consectetur corporis perspiciatis expedita mollitia nobis quasi veritatis! Voluptatem, omnis, incidunt.</p>
