--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 </head>
 <body>
 
-
-<div id="carousel-header" class="carousel slide slideheader" data-ride="carousel">
 <nav class="navbar navbar-default menutop">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -21,7 +19,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo"></a>
+      <!-- <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo"></a> -->
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -36,51 +34,56 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-header" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-header" data-slide-to="1"></li>
-    <li data-target="#carousel-header" data-slide-to="2"></li>
-  </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner carousel-header" role="listbox">
-    <div class="item active">
-      <img class="imagensota" src="images/slider.jpg" alt="fdghdfgh">
-      <div class="carousel-caption captionheader">
-        <h1 class="titulocarousel">Somos tus ojos en china</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis eius est ullam. Quia fugiat mollitia, odit autem consectetur quos possimus esse laboriosam omnis molestias quis repellat illo eligendi nesciunt quo maiores vel quidem vero reiciendis dolorum eaque cumque cum quae, ipsa perferendis. Ea rerum quis excepturi adipisci exercitationem, nisi voluptatem asperiores ut non molestias neque aperiam ipsa id dolorem, blanditiis accusantium aliquam! Reiciendis, fugit consequatur quidem voluptas eos doloremque odio.</p>
-        <button type="button" class="btn boton">ir a servicios</button>
+<section class="container slidersection">
+  <div id="carousel-header" class="carousel slide slideheader" data-ride="carousel">
+  
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-header" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-header" data-slide-to="1"></li>
+      <li data-target="#carousel-header" data-slide-to="2"></li>
+    </ol>
+  
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner carousel-header" role="listbox">
+      <div class="item active">
+        <img src="images/slider.jpg" alt="fdghdfgh">
+        <div class="carousel-caption captionheader">
+          <h1 class="titulocarousel">Somos tus ojos en china</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis eius est ullam. Quia fugiat mollitia, odit autem consectetur quos possimus esse laboriosam omnis molestias quis repellat illo eligendi nesciunt quo maiores vel quidem vero reiciendis dolorum eaque cumque cum quae, ipsa perferendis. Ea rerum quis excepturi adipisci exercitationem, nisi voluptatem asperiores ut non molestias neque aperiam ipsa id dolorem, blanditiis accusantium aliquam! Reiciendis, fugit consequatur quidem voluptas eos doloremque odio.</p>
+          <button type="button" class="btn boton">ir a servicios</button>
+        </div>
+      </div>
+      <div class="item">
+        <img src="images/slider.jpg" alt="sfgddfgdf">
+        <div class="carousel-caption captionheader">
+          <h1 class="titulocarousel">Somos tus ojos en china</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptates, earum consequatur aperiam, tenetur iusto! Omnis ex provident quae ad, magnam rem quos rerum cupiditate eveniet consequuntur repellendus vel aperiam eligendi incidunt quibusdam similique ipsam optio, distinctio expedita assumenda facere numquam laudantium error modi! Aliquam quia nihil voluptate facere, ea quasi. Aliquam non quibusdam animi eum laborum vero, iusto distinctio amet quia quam deserunt dolore velit. Rem eius eaque ad.</p>
+          <button type="button" class="btn boton">ir a servicios</button>
+        </div>
+      </div>
+      <div class="item">
+        <img src="images/slider.jpg" alt="sfgddfgdf">
+        <div class="carousel-caption captionheader">
+          <h1 class="titulocarousel">Somos tus ojos en china</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae culpa saepe rerum omnis, id hic impedit, nam expedita laboriosam magni assumenda? Doloremque iure accusamus ipsum, perferendis ratione, tempora eius repellendus a reprehenderit deleniti facilis! Autem praesentium dolores mollitia neque fugit molestias doloribus, nam eligendi. Minima enim perferendis, expedita eveniet accusantium molestias hic, sunt, repellat maxime natus sit quidem laboriosam inventore possimus neque. Tenetur debitis nihil, nisi ea dolorem quos aspernatur!</p>
+          <button type="button" class="btn boton">ir a servicios</button>
+        </div>
       </div>
     </div>
-    <div class="item">
-      <img class="imagensota" src="images/slider.jpg" alt="sfgddfgdf">
-      <div class="carousel-caption captionheader">
-        <h1 class="titulocarousel">Somos tus ojos en china</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptates, earum consequatur aperiam, tenetur iusto! Omnis ex provident quae ad, magnam rem quos rerum cupiditate eveniet consequuntur repellendus vel aperiam eligendi incidunt quibusdam similique ipsam optio, distinctio expedita assumenda facere numquam laudantium error modi! Aliquam quia nihil voluptate facere, ea quasi. Aliquam non quibusdam animi eum laborum vero, iusto distinctio amet quia quam deserunt dolore velit. Rem eius eaque ad.</p>
-        <button type="button" class="btn boton">ir a servicios</button>
-      </div>
-    </div>
-    <div class="item">
-      <img class="imagensota" src="images/slider.jpg" alt="sfgddfgdf">
-      <div class="carousel-caption captionheader">
-        <h1 class="titulocarousel">Somos tus ojos en china</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae culpa saepe rerum omnis, id hic impedit, nam expedita laboriosam magni assumenda? Doloremque iure accusamus ipsum, perferendis ratione, tempora eius repellendus a reprehenderit deleniti facilis! Autem praesentium dolores mollitia neque fugit molestias doloribus, nam eligendi. Minima enim perferendis, expedita eveniet accusantium molestias hic, sunt, repellat maxime natus sit quidem laboriosam inventore possimus neque. Tenetur debitis nihil, nisi ea dolorem quos aspernatur!</p>
-        <button type="button" class="btn boton">ir a servicios</button>
-      </div>
-    </div>
+  
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-header" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carousel-header" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-header" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-header" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+</section>
 
 <section class="info">
   <div class="container">
