--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>RedSun</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
 <nav class="navbar navbar-default menutop">
+    <div class="red-stripe">
+    
+</div>
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -19,7 +20,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <!-- <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo"></a> -->
+      <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -35,7 +36,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<section class="container slidersection">
+<section class="container">
   <div id="carousel-header" class="carousel slide slideheader" data-ride="carousel">
   
     <!-- Indicators -->
@@ -48,7 +49,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner carousel-header" role="listbox">
       <div class="item active">
-        <img src="images/slider.jpg" alt="fdghdfgh">
+        <img class="img-responsive" src="images/slider.jpg" alt="fdghdfgh">
         <div class="carousel-caption captionheader">
           <h1 class="titulocarousel">Somos tus ojos en china</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis eius est ullam. Quia fugiat mollitia, odit autem consectetur quos possimus esse laboriosam omnis molestias quis repellat illo eligendi nesciunt quo maiores vel quidem vero reiciendis dolorum eaque cumque cum quae, ipsa perferendis. Ea rerum quis excepturi adipisci exercitationem, nisi voluptatem asperiores ut non molestias neque aperiam ipsa id dolorem, blanditiis accusantium aliquam! Reiciendis, fugit consequatur quidem voluptas eos doloremque odio.</p>
@@ -56,7 +57,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="images/slider.jpg" alt="sfgddfgdf">
+        <img class="img-responsive" src="images/slider.jpg" alt="sfgddfgdf">
         <div class="carousel-caption captionheader">
           <h1 class="titulocarousel">Somos tus ojos en china</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptates, earum consequatur aperiam, tenetur iusto! Omnis ex provident quae ad, magnam rem quos rerum cupiditate eveniet consequuntur repellendus vel aperiam eligendi incidunt quibusdam similique ipsam optio, distinctio expedita assumenda facere numquam laudantium error modi! Aliquam quia nihil voluptate facere, ea quasi. Aliquam non quibusdam animi eum laborum vero, iusto distinctio amet quia quam deserunt dolore velit. Rem eius eaque ad.</p>
@@ -64,7 +65,7 @@
         </div>
       </div>
       <div class="item">
-        <img src="images/slider.jpg" alt="sfgddfgdf">
+        <img class="img-responsive" src="images/slider.jpg" alt="sfgddfgdf">
         <div class="carousel-caption captionheader">
           <h1 class="titulocarousel">Somos tus ojos en china</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae culpa saepe rerum omnis, id hic impedit, nam expedita laboriosam magni assumenda? Doloremque iure accusamus ipsum, perferendis ratione, tempora eius repellendus a reprehenderit deleniti facilis! Autem praesentium dolores mollitia neque fugit molestias doloribus, nam eligendi. Minima enim perferendis, expedita eveniet accusantium molestias hic, sunt, repellat maxime natus sit quidem laboriosam inventore possimus neque. Tenetur debitis nihil, nisi ea dolorem quos aspernatur!</p>
