Cambio de imagenes del carousel

--- a/index.html
+++ b/index.html
@@ -44,31 +44,59 @@
       <li data-target="#carousel-header" data-slide-to="0" class="active"></li>
       <li data-target="#carousel-header" data-slide-to="1"></li>
       <li data-target="#carousel-header" data-slide-to="2"></li>
+      <li data-target="#carousel-header" data-slide-to="3"></li>
+      <li data-target="#carousel-header" data-slide-to="4"></li>
+      <li data-target="#carousel-header" data-slide-to="5"></li>
+      <li data-target="#carousel-header" data-slide-to="6"></li>
     </ol>
   
     <!-- Wrapper for slides -->
     <div class="carousel-inner carousel-header" role="listbox">
       <div class="item active">
-        <img class="img-responsive" src="images/slider.jpg" alt="fdghdfgh">
+        <img class="img-responsive" src="images/warehouse1.jpg" alt="fdghdfgh">
         <div class="carousel-caption captionheader">
           <h1 class="titulocarousel">Somos tus ojos en china</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis eius est ullam. Quia fugiat mollitia, odit autem consectetur quos possimus esse laboriosam omnis molestias quis repellat illo eligendi nesciunt quo maiores vel quidem vero reiciendis dolorum eaque cumque cum quae, ipsa perferendis. Ea rerum quis excepturi adipisci exercitationem, nisi voluptatem asperiores ut non molestias neque aperiam ipsa id dolorem, blanditiis accusantium aliquam! Reiciendis, fugit consequatur quidem voluptas eos doloremque odio.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit commodi, sint tenetur esse, maiores ab illo. Porro maiores cupiditate esse!</p>
           <button type="button" class="btn boton">ir a servicios</button>
         </div>
       </div>
       <div class="item">
-        <img class="img-responsive" src="images/slider.jpg" alt="sfgddfgdf">
+        <img class="img-responsive" src="images/warehouse2.jpg" alt="sfgddfgdf">
         <div class="carousel-caption captionheader">
           <h1 class="titulocarousel">Somos tus ojos en china</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo voluptates, earum consequatur aperiam, tenetur iusto! Omnis ex provident quae ad, magnam rem quos rerum cupiditate eveniet consequuntur repellendus vel aperiam eligendi incidunt quibusdam similique ipsam optio, distinctio expedita assumenda facere numquam laudantium error modi! Aliquam quia nihil voluptate facere, ea quasi. Aliquam non quibusdam animi eum laborum vero, iusto distinctio amet quia quam deserunt dolore velit. Rem eius eaque ad.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque molestiae doloremque quo repellat id eligendi ad sit accusantium maiores maxime.</p>
           <button type="button" class="btn boton">ir a servicios</button>
         </div>
       </div>
       <div class="item">
-        <img class="img-responsive" src="images/slider.jpg" alt="sfgddfgdf">
+        <img class="img-responsive" src="images/warehouse3.jpg" alt="sfgddfgdf">
         <div class="carousel-caption captionheader">
           <h1 class="titulocarousel">Somos tus ojos en china</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae culpa saepe rerum omnis, id hic impedit, nam expedita laboriosam magni assumenda? Doloremque iure accusamus ipsum, perferendis ratione, tempora eius repellendus a reprehenderit deleniti facilis! Autem praesentium dolores mollitia neque fugit molestias doloribus, nam eligendi. Minima enim perferendis, expedita eveniet accusantium molestias hic, sunt, repellat maxime natus sit quidem laboriosam inventore possimus neque. Tenetur debitis nihil, nisi ea dolorem quos aspernatur!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ipsum animi omnis. Et qui explicabo est consequatur voluptatum, dolorem. Obcaecati!</p>
+          <button type="button" class="btn boton">ir a servicios</button>
+        </div>
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="images/warehouse4.jpg" alt="sfgddfgdf">
+        <div class="carousel-caption captionheader">
+          <h1 class="titulocarousel">Somos tus ojos en china</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ipsum animi omnis. Et qui explicabo est consequatur voluptatum, dolorem. Obcaecati!</p>
+          <button type="button" class="btn boton">ir a servicios</button>
+        </div>
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="images/port1.jpg" alt="sfgddfgdf">
+        <div class="carousel-caption captionheader">
+          <h1 class="titulocarousel">Somos tus ojos en china</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ipsum animi omnis. Et qui explicabo est consequatur voluptatum, dolorem. Obcaecati!</p>
+          <button type="button" class="btn boton">ir a servicios</button>
+        </div>
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="images/port2.jpg" alt="sfgddfgdf">
+        <div class="carousel-caption captionheader">
+          <h1 class="titulocarousel">Somos tus ojos en china</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem ipsum animi omnis. Et qui explicabo est consequatur voluptatum, dolorem. Obcaecati!</p>
           <button type="button" class="btn boton">ir a servicios</button>
         </div>
       </div>
